--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 <body>
     <section class="menu.container">
         <div class="logo">
-            <img
+            <img src="img/flecha.png">
+            <p>Travel Buddy</p>
+
+            <nav class="navbar">
+                <ul>
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Login</li>
+                </ul>
+                <a class="btn-1">SIGN UP FOR FREE</a>
+
+            </nav>
 
         </div>
 
