--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <section class="menu.container">
         <div class="logo">
@@ -26,6 +28,21 @@
 
     </section>
 
-    
+    <section class="container-2">
+        <div class="dos-container">
+            <h1>BIENVENIDO AL MUNDO DIGITAL</h1>
+            <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsa at id tempore debitis. Sapiente
+                quisquam autem accusantium ex, qui fuga porro ullam magni. Modi.
+            </P>
+            <div class="imagen">
+                <img src="img/img2.jpg">
+            </div>
+
+        </div>
+
+    </section>
+
+
 </body>
+
 </html>
