--- a/index.html
+++ b/index.html
@@ -42,6 +42,47 @@
 
     </section>
 
+    <section class="cuerpo.container">
+        <div class="txt.container">
+            <h1>Travel Mobile App Landing Page</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsa at id tempore debitis. Sapiente
+                quisquam autem accusantium ex, qui fuga porro ullam magni. Modi.</p>
+                <a class="btn-1">LEARN HOW WORKS</a>
+        </div>
+
+        <div class="img-1">
+            <img src="img/img3.jpg">
+
+        </div>
+
+        <div class="img-2">
+            <img src="img/img4.jpg">
+
+        </div>
+        <div class="txt-2">
+            <h1>Travel Mobile App Landing Page</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsa at id tempore debitis. Sapiente
+                quisquam autem accusantium ex, qui fuga porro ullam magni. Modi.</p>
+                <a class="btn-2">LEARN HOW WORKS</a>
+
+        </div>
+
+        <div class="txt.3">
+            <h1>Travel Mobile App Landing Page</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsa at id tempore debitis. Sapiente
+                quisquam autem accusantium ex, qui fuga porro ullam magni. Modi.</p>
+                <a class="btn-1">LEARN HOW WORKS</a>
+        </div>
+
+        <div class="img-3">
+            <img src="img/img5.jpg">
+
+        </div>
+
+
+
+    </section>
+
 
 </body>
 
