--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li>Features</li>
                     <li>Pricing</li>
                     <li>Login</li>
+                    <li><a class="btn-1">SIGN UP FOR FREE</a></li>
                 </ul>
                 <a class="btn-1">SIGN UP FOR FREE</a>
 
