--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="img/flecha.png">
             <p>Travel Buddy</p>
 
-            <nav class="navbar">
+            <div class="navbar">
                 <ul>
                     <li>Features</li>
                     <li>Pricing</li>
@@ -24,7 +24,7 @@
                 </ul>
                 
 
-            </nav>
+            </div>
 
         </div>
 
