--- a/index.html
+++ b/index.html
@@ -7,91 +7,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LadingPageRebeca</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
-<body>
-    
-    <div class="head">
-        <div class="menu">
-            <img src="img/flecha.png">
-            <a href="#">Titulo</a>
-        </div>
-        <nav class="navbar">
-            <a href="#">Inicio</a>
-            <a href="#">Contacto</a>
-            <a href="#">Nosotros</a>
-            <a class="btn-1" href="#">Nosotros</a>
+<div class="head">
+    <div class="menu">
+        <img src="img/flecha.png">
+        <a href="#">TRAVEL BUDDY</a>
+    </div>
+    <nav class="navbar">
+        <a href="#">Inicio</a>
+        <a href="#">Contacto</a>
+        <a href="#">Nosotros</a>
+        <a class="btn-1" href="#">Nosotros</a>
 
-        </nav>
+    </nav>
+</div>
+
+
+<div class="header-content">
+    <div class="content">
+        <h1>An easier trip, every time</h1>
+        <p>
+            Imagine checking one place for all your travel details and a hheads up as things throughout your trip.
+            See why life Travel Buddy is a distant memory for millions of travelers and sing up today!
+
+        </p>
     </div>
 
+    <div class="img-1"></div>
 
-    <div class="header-content">
-        <div class="content">
-            <h1>AN EARSI CONMPANY TINGFHJD</h1>
+</div>
+
+
+<section class="container-element">
+
+    <div class="gallery1">
+        <div class="contact-1">
+            <h3>TIUTULO1 </h3>
             <p>
-                Diccionario multilingüe y buscador con acceso a millones de traducciones hechas por otras personas.
-                Idiomas español.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus unde! Temporibus porro
+                placeat iste, voluptates minima perferendis officiis nihil quis dolor nobis ut consectetur sapiente
+                similique
             </p>
-            <img class="img-1" src="img/trans.png" alt="">
-
+            <a href="#" class="btn-2">Mas Informacion</a>
         </div>
-
+        <div class="image1"><img class="circle" src="img/img3.jpg" alt=""></div>
     </div>
 
-
-    <section class="porfolios-container">
-
-        <div class="profolio">
-            <div class="porpolio-1">
-                <h3>TIUTULO1 </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus unde! Temporibus porro
-                    placeat iste, voluptates minima perferendis officiis nihil quis dolor nobis ut consectetur sapiente
-                    similique
-                </p>
-                <a href="#" class="btn-2">Mas Informacion</a>
-            </div>
-            <img src="img/img3.jpg" alt="">
+    <div class="gallery2">
+        <img src="img/img4.jpg" alt="">
+        <div class="contact-1">
+            <h3>TIUTULO2 </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In laboriosam doloremque autem voluptates
+                aliquam. Atque consequuntur quos voluptatem eos. Commodi numquam voluptatem repellat mollitia
+                laboriosam hic molestiae est nulla autem.</p>
+            <a href="#" class="btn-2">Mas Informacion</a>
         </div>
+    </div>
 
-        <div class="profolio">
-            <img src="img/img4.jpg" alt="">
-            <div class="profolio-2">
-                <h3>TIUTULO2 </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In laboriosam doloremque autem voluptates
-                    aliquam. Atque consequuntur quos voluptatem eos. Commodi numquam voluptatem repellat mollitia
-                    laboriosam hic molestiae est nulla autem.</p>
-                <a href="#" class="btn-2">Mas Informacion</a>
-            </div>
+    <div class="gallery3">
+        <div class="contact-1">
+            <h3>TIUTULO3 </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus unde! Temporibus porro
+                placeat iste, voluptates minima perferendis officiis nihil quis dolor nobis ut consectetur sapiente
+                similique
+            </p>
+            <a href="#" class="btn-2">Mas Informacion</a>
         </div>
+        <img src="img/img5.jpg" alt="">
+    </div>
+</section>
 
-        <div class="profolio">
-            <div class="porpolio-1">
-                <h3>TIUTULO3 </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus unde! Temporibus porro
-                    placeat iste, voluptates minima perferendis officiis nihil quis dolor nobis ut consectetur sapiente
-                    similique
-                </p>
-                <a href="#" class="btn-2">Mas Informacion</a>
-            </div>
-            <img src="img/img5.jpg" alt="">
-        </div>
-    </section>
+<div class="block-2">
+    <div class="card-2">
+        <h3>TIUTULO3 </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus unde! Temporibus porro
+            placeat iste, voluptates minima perferendis officiis nihil quis dolor nobis ut consectetur sapiente
+            similique
+        </p>
+        <a href="#" class="btn-2">Mas Informacion</a>
+    </div>
+    <img src="img/img7.png" alt="">
+</div>
 
-        <div class="block-2">
-            <div class="cars-2">
-                <h3>TIUTULO3 </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus unde! Temporibus porro
-                    placeat iste, voluptates minima perferendis officiis nihil quis dolor nobis ut consectetur sapiente
-                    similique
-                </p>
-                <a href="#" class="btn-2">Mas Informacion</a>
-            </div>
-            <img src="img/img7.png" alt="">
-        </div>
+
+<section class="program-conten">
+
+    <div class="buddy"></div>
+
+    <div class="products">
+        <ul class="custom-list">
+            <li><strong>PRODUCTS</strong></li>
+            <li>Download app</li>
+            <li>Travel Buddy</li>
+            <li>Travel Budyy Pro</li>
+            <li>Travel Buddy for Teams</li>
+            <li>Help Center</li>
+        </ul>
+    </div>
+
+    <div class="resources">
+        <ul class="custom-list">
+            <li><strong>NEWS & RESOURCES</strong></li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>Jobs</li>
+            <li>User Agreement</li>
+            <li>Privacy Policy</li>
+            <li>Segurity</li>
+            <li>Cookie Preferences</li>
+        </ul>
+    </div>
+
+    <div class="partners">
+        <ul class="custom-list">
+            <li><strong>PARTNERS</strong></li>
+            <li>Developer API</li>
+            <li>Supported Booking Sites</li>
+        </ul>
+    </div>
+
+</section>
+
+
+<div class="networks">
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-twitter"></i>
+    <i class="fa-brands fa-pinterest"></i>
+    <i class="fa-brands fa-linkedin"></i>
+</div>
+
+
+
+
+
 </body>
 
 </html>
