--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <a href="#">TRAVEL BUDDY</a>
     </div>
     <nav class="navbar">
-        <a href="#">Inicio</a>
-        <a href="#">Contacto</a>
-        <a href="#">Nosotros</a>
-        <a class="btn-1" href="#">Nosotros</a>
+        <a href="#">Features</a>
+        <a href="#">Pricing</a>
+        <a href="#">Login</a>
+        <a class="btn-1" href="#">SING UP FOR FREE</a>
 
     </nav>
 </div>
@@ -44,13 +44,13 @@
 
     <div class="gallery1">
         <div class="contact-1">
-            <h3>TIUTULO1 </h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus unde! Temporibus porro
-                placeat iste, voluptates minima perferendis officiis nihil quis dolor nobis ut consectetur sapiente
-                similique
-            </p>
-            <a href="#" class="btn-2">Mas Informacion</a>
+            <h3>You handle the booking, we'll takeit from there</h3>
+            <p>Unlike other travel apps, Travel Buddy can organize your travel plans
+                no matter where you book.Simply forward your confirmation emails 
+                to <strong>plans@travelbuddy.com</strong> and in a matter of seconds , Travel Buddy
+                will create a master itinerary for every trip.</p>
+
+            <a href="#" class="btn-2">LEARN HOW IT WORKS</a>
         </div>
         <div class="image1"><img class="circle" src="img/img3.jpg" alt=""></div>
     </div>
