--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 to <strong>plans@travelbuddy.com</strong> and in a matter of seconds , Travel Buddy
                 will create a master itinerary for every trip.</p>
 
-            <a href="#" class="btn-2">LEARN HOW IT WORKS</a>
+            <a href="#" class="btn-2"><strong>HOW IT WORKS</strong></a>
         </div>
         <div class="image1"><img class="circle" src="img/img3.jpg" alt=""></div>
     </div>
@@ -58,23 +58,23 @@
     <div class="gallery2">
         <img src="img/img4.jpg" alt="">
         <div class="contact-1">
-            <h3>TIUTULO2 </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In laboriosam doloremque autem voluptates
-                aliquam. Atque consequuntur quos voluptatem eos. Commodi numquam voluptatem repellat mollitia
-                laboriosam hic molestiae est nulla autem.</p>
-            <a href="#" class="btn-2">Mas Informacion</a>
+            <h3>Helpful reminders/alerts so you never miss a beat</h3>
+            <p>Packed with features that give you a leg up on changes and 
+                help you make the most of all your trips, Travel Buddy Pro
+                is where the magic happens.</p>
+
+            <a href="#" class="btn-2"><strong>MORE ABOUT PRO</strong></a>
         </div>
     </div>
 
     <div class="gallery3">
         <div class="contact-1">
-            <h3>TIUTULO3 </h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus unde! Temporibus porro
-                placeat iste, voluptates minima perferendis officiis nihil quis dolor nobis ut consectetur sapiente
-                similique
-            </p>
-            <a href="#" class="btn-2">Mas Informacion</a>
+            <h3>Always know where to be and when</h3>
+            <p>Need a reminder when it's time to leave for the airport?
+                Not sure where to eat in the airport or near your hotel?
+                Travel Buddy has you covered.</p>
+
+            <a href="#" class="btn-2"><strong>DOWNLOAD THE APP</strong></a>
         </div>
         <img src="img/img5.jpg" alt="">
     </div>
@@ -82,12 +82,10 @@
 
 <div class="block-2">
     <div class="card-2">
-        <h3>TIUTULO3 </h3>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus unde! Temporibus porro
-            placeat iste, voluptates minima perferendis officiis nihil quis dolor nobis ut consectetur sapiente
-            similique
-        </p>
+        <h3>Try the travel app that keeps up with you</h3>
+        <p>So many trips, so tittle time. Let Travel buddy
+            worry about the datalist,so you don't have to.</p>
+            
         <a href="#" class="btn-2">Mas Informacion</a>
     </div>
     <img src="img/img7.png" alt="">
