--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <h3>Try the travel app that keeps up with you</h3>
         <p>So many trips, so tittle time. Let Travel buddy
             worry about the datalist,so you don't have to.</p>
-            
-        <a href="#" class="btn-2">Mas Informacion</a>
+
+        <a href="#" class="btn-2"><strong>SING UP FOR FREE</strong></a>
     </div>
     <img src="img/img7.png" alt="">
 </div>
